# Menu

./: .cirrus.yml  .gitignore  CMakeLists.txt  README.md
Shutdown/: CMakeLists.txt  Shutdown_de_DE.ts  logout.qml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  shutdown.qml
interfaces/: pluginsiterface.h
plugin-battery/: CMakeLists.txt  batterywidget.cpp  batterywidget.h  plugin.h
plugin-controlcenter/: CMakeLists.txt  controlwidget.cpp  controlwidget.h  plugin.h  popupwindow.cpp  popupwindow.h  volumewidget.cpp  volumewidget.h
plugin-datetime/: CMakeLists.txt  datetime.h  datetimewidget.cpp
plugin-statusnotifier/: CMakeLists.txt  sniasync.cpp  sniasync.h  statusnotifier.h  statusnotifierbutton.cpp  statusnotifierbutton.h  statusnotifierwidget.cpp  statusnotifierwidget.h
plugin-tray/: CMakeLists.txt  plugin.h  traywidget.cpp
plugin-volume/: CMakeLists.txt  controlwidget.cpp  controlwidget.h  plugin.h  volumewidget.cpp  volumewidget.h
src/: CMakeLists.txt  appmenuwidget.cpp  appmenuwidget.h  blurwindow.cpp  extensionwidget.cpp  extensionwidget.h  lineediteventfilter.h  main.cpp  mainpanel.cpp  mainpanel.h  mainwindow.cpp  mainwindow.h  pluginmanager.cpp  pluginmanager.h  popupwindow.cpp  popupwindow.h  thumbnails.cpp  thumbnails.h
src/actionsearch/: actionsearch.cpp  actionsearch.h
src/actionsearch/ui/: actionsearchdialog.ui  dialog.cpp  dialog.h
src/appmenu/: appmenumodel.cpp  appmenumodel.h  com.canonical.AppMenu.Registrar.xml  dbusmenuimporter.cpp  dbusmenuimporter.h  dbusmenushortcut_p.cpp  menuimporter.cpp  menuimporter.h  menuimporteradaptor.cpp
src/translations/: menubar_ar.ts  menubar_cs.ts  menubar_da.ts  menubar_de.ts  menubar_el.ts  menubar_en.ts  menubar_eo.ts  menubar_es.ts  menubar_fr.ts  menubar_gl.ts  menubar_he.ts  menubar_hu.ts  menubar_ie.ts  menubar_it.ts  menubar_ja.ts  menubar_ka.ts  menubar_ko.ts  menubar_lt.ts  menubar_nb_NO.ts  menubar_nl.ts  menubar_pl.ts  menubar_pt.ts  menubar_pt_BR.ts  menubar_ru.ts  menubar_sl.ts  menubar_sv.ts  menubar_tr.ts  menubar_translations.ts  menubar_uk.ts  menubar_zh_Hans.ts  menubar_zh_Hant.ts
topbar/: CMakeLists.txt  appmenuwidget.cpp  appmenuwidget.h  mainpanel.cpp  mainpanel.h  mainwindow.cpp  resources.qrc
topbar/appmenu/: appmenumodel.cpp  appmenumodel.h  dbusmenu_interface.cpp
